springboot2/deploy/kubernetes/sso_deploy.yml
apiVersion: v1
kind: Service
metadata:
  name: sso_service
  namespace: lab
spec:
  selector:
    app: sso_deployment
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sso_deployment
  namespace: lab
spec:
  selector:
    matchLabels:
      app: sso_deployment
  template:
    replica: 3

    metadata:
      labels:
        app: sso_deployment
    
    spec:
      containers:
      - name: sso
        image: 
        
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        
        ports:
        - containerPort: 8080
